--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -8,7 +8,7 @@
 		<section layout:fragment="contents" class="container">
 			<div class=" contents">
 				<div>
-					<div  class="d-flex justify-content-between p-2 mt-4">
+					<div  class="d-flex justify-content-between mt-3">
 						<h2 class="font-weight-bold" >주문/결제</h2>
 						
 						<div class="d-flex">
@@ -33,11 +33,13 @@
 				</div>
 			
 			
-			<div class="d-flex"><!--  장바구니 정보- 배송정보 전체 묶는 div-->
+			<div class="d-flex"><!--주문정보- 배송정보 전체 묶는 div-->
 
-			<div>
+			<div> <!--  배송정보, 주문상품 묶는 div -->
 				<div class="border rounded order-box p-1"> <!--  주문자 정보 -->
-					<h4 class="font-weight-bold my-3">배송지 정보</h4>
+				<div class="ml-2"><!-- 박스 안에서 마진값 전체로 주는 역할 -->
+			
+					<h4 class="font-weight-bold my-3 ">배송지 정보</h4>
 					<div class="d-flex">
 						<div class="mr-2">
 							<input type="radio"><label  class="ml-1">주문자와 동일</label>
@@ -67,15 +69,35 @@
 						 <div><input type="checkbox" class="mt-3 mr-1">기본배송지로 설정</div>
 						</div>
 					</div>
+					</div><!-- 박스 안에서 마진값 전체로 주는 역할 -->
 				
 				</div>
 				
 				
 				<div class="border rounded order-box p-1 mt-4"> <!--  주문하려는 책 정보 -->
+				<div class="ml-2"><!-- 박스 안에서 마진값 전체로 주는 역할 -->
 					<h4 class="font-weight-bold my-3">주문 상품 (0)</h4>
 					<table class="table">
+					<!--  넓이 수정하기 
+					890 *157 (책 정보 1칸당 )
+					이미지 145
+					책 제목 500
+					수량 100 
+					판매가 145
+					 -->
 						<tr>
-							<td><img src="#" class="cart-book-img mx-2"></td>
+							<td><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " class="cart-book-img mx-2"></td>
+							<td ><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
+							<td>
+								<div class="font-weight-bold mx-1">1개</div>
+							</td>
+							<td>
+								<div class="font-weight-bold mx-1">판매가</div>
+								<del><div>정가</div></del>
+							</td>
+						</tr>
+						<tr>
+							<td><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " class="cart-book-img mx-2"></td>
 							<td><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
 							<td>
 								<div class="font-weight-bold mx-1">1개</div>
@@ -86,18 +108,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td><img src="#" class="cart-book-img mx-2"></td>
-							<td><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
-							<td>
-								<div class="font-weight-bold mx-1">1개</div>
-							</td>
-							<td>
-								<div class="font-weight-bold mx-1">판매가</div>
-								<del><div>정가</div></del>
-							</td>
-						</tr>
-						<tr>
-							<td><img src="#" class="cart-book-img mx-2"></td>
+							<td><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " class="cart-book-img mx-2"></td>
 							<td><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
 							<td>
 								<div class="font-weight-bold mx-1">1개</div>
@@ -108,40 +119,47 @@
 							</td>
 						</tr>
 					</table>
+					</div><!-- 박스 안에서 마진값 전체로 주는 역할 -->
 				</div>
+
+
 				
 						
 						
 						
-			</div>
+			</div><!--  배송정보, 주문상품 묶는 div -->
 						
-				<div class="col-3 border p-2 cart-total-price ml-1"><!--  결제금액 정보 -->
-					
-					<table class="table table-borderless">
-						<tr>
-							<th>상품 금액</th>
-							<td> >0000원</td>
-						</tr>
-						<tr>
-							<th>배송비</th>
-							<td>0000원</td>
-						</tr>
-						<tr>
-							<th>상품 할인</th>
-							<td >0000원</td>
-						</tr>
-						<tr class=" border-top">
-							<th>결제 예정 금액</th>
-							<td>0000원</td>
-						</tr>
-						<tr>
-							<th>적립 예정 포인트</th>
-							<td>000 point</td>
-						</tr>
-					</table>
-						<button type="button" class="btn btn-primary my-3 w-100">결제하기</button>
-						<button type="button" class="btn btn-primary my-3 w-100">수령 매장 선택</button>
-				</div>
+					<div class="col-3 border p-2 cart-total-price ml-1"><!--  결제금액 정보 -->
+						
+						<table class="table table-borderless">
+							<tr>
+								<th>상품 금액</th>
+								<td> >0000원</td>
+							</tr>
+							<tr>
+								<th>배송비</th>
+								<td>0000원</td>
+							</tr>
+							<tr>
+								<th>상품 할인</th>
+								<td >0000원</td>
+							</tr>
+							<tr class=" border-top">
+								<th>결제 예정 금액</th>
+								<td>0000원</td>
+							</tr>
+							<tr>
+								<th>적립 예정 포인트</th>
+								<td>000 point</td>
+							</tr>
+						</table>
+							<button type="button" class="btn btn-primary my-3 w-100">결제하기</button>
+							<button type="button" class="btn btn-primary my-3 w-100">수령 매장 선택</button>
+							<!-- 
+						<button type="button" class="btn btn-primary my-3 w-100">이전 화면으로</button>
+							 -->
+					</div>
+				
 			
 				
 			</div>
