[배지현] -order page 디자인 수정 #6

--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -85,39 +85,31 @@
 					수량 100 
 					판매가 145
 					 -->
-						<tr>
-							<td><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " class="cart-book-img mx-2"></td>
-							<td ><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
-							<td>
-								<div class="font-weight-bold mx-1">1개</div>
+						<tr class="order-bookInfo ">
+							<td class="order-book-img"><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " ></td>
+							<td class="order-book-title align-middle"><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
+							<td class="order-book-amount align-middle text-center">
+								<div class="font-weight-bold">1개</div>
 							</td>
-							<td>
-								<div class="font-weight-bold mx-1">판매가</div>
+							<td class="order-book-price align-middle  text-center">
+								<div class="font-weight-bold">판매가</div>
 								<del><div>정가</div></del>
 							</td>
 						</tr>
-						<tr>
-							<td><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " class="cart-book-img mx-2"></td>
-							<td><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
-							<td>
-								<div class="font-weight-bold mx-1">1개</div>
+						
+						<tr class="order-bookInfo ">
+							<td class="order-book-img"><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " ></td>
+							<td class="order-book-title align-middle"><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
+							<td class="order-book-amount align-middle text-center">
+								<div class="font-weight-bold">1개</div>
 							</td>
-							<td>
-								<div class="font-weight-bold mx-1">판매가</div>
+							<td class="order-book-price align-middle  text-center">
+								<div class="font-weight-bold">판매가</div>
 								<del><div>정가</div></del>
 							</td>
 						</tr>
-						<tr>
-							<td><img src="https://image.aladin.co.kr/product/35255/76/coversum/k112934145_1.jpg " class="cart-book-img mx-2"></td>
-							<td><div class="font-weight-bold">책 제목 어쩌구저쩌구저쩌구 </div></td>
-							<td>
-								<div class="font-weight-bold mx-1">1개</div>
-							</td>
-							<td>
-								<div class="font-weight-bold mx-1">판매가</div>
-								<del><div>정가</div></del>
-							</td>
-						</tr>
+						
+						
 					</table>
 					</div><!-- 박스 안에서 마진값 전체로 주는 역할 -->
 				</div>
