--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -236,6 +236,26 @@ color: #7CC491;
 	width:600px;
 }
 
+.order-bookInfo{
+	width:890px;
+	height:160px;
+}
+.order-book-img{
+	width:100px;
+	object-fit: contain;
+}
+.order-book-title{
+	width:500px;
+	word-break: break-word; /* 긴 단어가 넘어갈 때 자동으로 줄바꿈 */
+    white-space: normal; /* 텍스트가 넘어가면 줄 바꿈 */
+}
+.order-book-amount{
+	width:100px;
+}
+.order-book-price{
+	width:145px;
+}
+
 
 	/*
 .join-info {
