[배지현] - cart -> 결제금액 완성 #9 - order -> 로그인한 사용자의 주소지 정보 #5

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -223,6 +223,9 @@ color: #7CC491;
 }
 .cart-book-img{
 	width:90px;
+	height:140px;
+	object-fit: contain;
+	vertical-align: middle;
 }
 .cart-total-price{
 	width:290px;
