--- a/src/main/resources/templates/order/order-complete.html
+++ b/src/main/resources/templates/order/order-complete.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html lang="ko" 
+    xmlns:th="http://www.thymeleaf.org" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+     layout:decorate="~{layout/default}">
+     
 
-</body>
+		<section layout:fragment="contents">
+		<div class="d-flex align-items-center justify-content-center w-75 contents">
+			<div class="my-4 order-box border">
+				<div class="d-flex align-items-center justify-content-center ">
+				<!-- 
+					<div>
+						<h3 class="font-weight-bold">주문이 완료되었습니다</h3>
+					</div>
+					<div class="d-flex align-items-center justify-content-center">
+						<h6 class="my-4 mr-2">주문번호 : </h6>
+						<h6 class="my-4 mr-4">0000-0000-0000</h6>
+					</div>
+				 -->
+				 <table class=" my-4">
+				 	<thead>
+					 	 <tr>
+					 	 	<th>
+					 	 		<h3 class="font-weight-bold">주문이 완료되었습니다</h3>
+					 	 	</th>
+					 	 </tr>
+				 	</thead>
+				 	<tbody>
+					 	 <tr>
+					 	 	<td>
+						 	 	<span class="mr-1">주문번호 : </span>
+						 	 	<span>0000-0000-0000 </span>
+					 	 	</td>
+					 	 </tr>
+				 	</tbody>
+				 </table>
+				</div>
+				<div class="d-flex align-items-center justify-content-center my-4">
+					<a class="btn btn-primary mx-2" href="/nunubooks/main">메인으로 이동</a>
+					<a class="btn btn-primary mx-2 " href="#">주문 내역 확인</a>
+				</div>
+			</div>
+		</div>
+			
+			
+		
+		
+		
+		</section>
+
+
+<script layout:fragment="script">
+</script>
+
 </html>
