--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -25,17 +25,22 @@
 					<button type="button" class="btn btn-primary w-100 mt-3" id="loginBtn">로그인</button>
 					<div class="d-flex justify-content-between m-3">
 						<div>
+							<a href="/nunubooks/account/find-account" class="text-dark mr-3">아이디 / 비밀번호 찾기</a>
+							<!-- 
 							<a href="#" class="text-dark mr-3">아이디 찾기</a>
 							<a href="#" class="text-dark">비밀번호 찾기</a>
+							 -->
 						</div>
 					<div>
 					<a href="/nunubooks/account/sign-up" class="text-dark mr-3">회원가입</a>
 					</div>
 					</div>
 				</div>
+				<!-- 
 				<div class="text-center outline h-50">
 				간편 로그인창
 				</div>
+				 -->
 			</div>
 		
 		</div>
